syntax = "proto3";

package pxgrider_proto;

option go_package = "github.com/vkumov/go-pxgrider/pxgrider_proto";

enum CredentialsType {
  CREDENTIALS_TYPE_UNSPECIFIED = 0;
  CREDENTIALS_TYPE_PASSWORD = 1;
  CREDENTIALS_TYPE_CERTIFICATE = 2;
}

message CredentialsPassword { string password = 1; }

message CredentialsCertificate {
  string private_key = 1;
  string certificate = 2;
  repeated string ca_certificates = 3;
}

message Credentials {
  CredentialsType type = 1;
  string node_name = 2;
  oneof kind {
    CredentialsPassword password = 3;
    CredentialsCertificate certificate = 4;
  }
}
